# DimarzSoftware-Release

./: .gitignore  api-server.cjs  build_errors.txt  check-errors.js  generate_test_csv.py  index.html  job_log.txt  job_log_windows.txt  jobs.json  package-lock.json  package.json  runs.json  scratch.js  scratch.rs  test-html2canvas.mjs  test-jspdf-output.mjs  test-jspdf.mjs  test.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: splash.html
src/: App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  cargo_error.txt  scratch.rs  tauri.conf.json  test_db.rs
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: clients.rs  leads.rs  license.rs  mod.rs  projects.rs  team.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/licensing/: hardware.rs  mod.rs  validator.rs
src-tauri/src/security/: encryption.rs  mod.rs
src/components/Common/: LoadingOverlay.tsx  ToastContainer.tsx
src/components/Layout/: SidebarFilter.tsx  SidebarNav.tsx  TopNav.tsx
src/components/License/: ActivationScreen.tsx
src/components/Pages/: AdminPage.tsx  BackupPage.tsx  ClientsPage.tsx  DashboardPage.tsx  FinancePage.tsx  GoogleFormScriptPage.tsx  ImportPage.tsx  InvoicesPage.tsx  LeadsPage.tsx  LoginPage.tsx  MyTeamPage.tsx  PlaceholderPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TeamPage.tsx  ValidatorPage.tsx
src/styles/: global.css
