[package]
name = "dimrz-desktop"
version = "1.1.5"
description = "Dimrz - Digital Marketing Zone Desktop App"
authors = ["Dimrz Team"]
license = "Proprietary"
edition = "2021"
[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
duckdb = { version = "1.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
csv = "1.3"
crossbeam-channel = "0.5.15"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
winreg = "0.52"


